# Movie-Website

./: .gitignore  app.py  plan.html  pyproject.toml
Movie_Website_Plan/: Plan.md  Welcome.md
Movie_Website_Plan/.obsidian/: workspace.json
TestHLS/: Dark.S01E01.WEBRip.Netflix.vi.srt  Dark.S01E01.WEBRip.Netflix.vi.vtt  cv_srt_2_vtt.py
TestHLS/templates/: index.html
core/: settings.py
crawler/: TODO.md
database/: design.md  design_db.txt
movies/: admin.py  models.py
movies/migrations/: 0001_initial.py  0002_alter_episode_options_alter_movie_options_and_more.py  0003_alter_movie_medium.py  0004_alter_episode_options_alter_movie_options_and_more.py
myproject/myproject/: settings.py
video_processor/: make_hls.py
